# cuda_kernel_benchmark

./: .gitignore  CMakeLists.txt  Makefile  README.md  cuda_bench_all.nsys-rep  cuda_bench_all.sqlite  cuda_bench_gemm.nsys-rep  intro.cu
benchmarks/: main.cu
benchmarks/conv2d/: conv2d_benchmark.cu
benchmarks/gemm/: gemm_benchmark.cu
benchmarks/reduction/: reduction_benchmark.cu
benchmarks/softmax/: softmax_benchmark.cu
benchmarks/transpose/: transpose.cu  transpose_benchmark.cu
benchmarks/vector_add/: main.cu  vector_add.cu  vector_add_benchmark.cu
include/cuda_bench/: benchmark.hpp  benchmarks.hpp  cuda_utils.cuh
include/hpc/: conv2d.hpp  gemm.hpp  hpc.hpp  reduction.hpp  softmax.hpp  transpose.hpp  vector_add.hpp
profiles/: conv2d.csv  conv2d_summary.txt  gemm.csv  gemm_summary.txt  reduction.csv  reduction_summary.txt  softmax.csv  softmax_summary.txt  transpose.csv  transpose_summary.txt  vector_add.csv  vector_add_summary.txt
scripts/: profile_benchmarks.sh
src/: conv2d.cu  gemm.cu  reduction.cu  softmax.cu  transpose.cu  vector_add.cu
